[gd_scene load_steps=6 format=2]

[ext_resource path="res://Hook.gd" type="Script" id=1]
[ext_resource path="res://resources/grapple.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 3 )

[node name="Hook" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Scrap" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Collider" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 2 )

[node name="RetreatingCollider" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RetreatingCollider"]
shape = SubResource( 3 )

[node name="PlayerBounds" type="Area2D" parent="."]

[node name="Bounds" type="CollisionShape2D" parent="PlayerBounds"]

[connection signal="body_entered" from="Collider" to="." method="_on_Collider_body_entered"]
[connection signal="body_entered" from="RetreatingCollider" to="." method="_on_RetreatingCollider_body_entered"]
